Complete feature (update, remove id, remove ids) without cartId not complete