@@ -2,6 +2,7 @@ package latipe.cart.services.Cart;
 
 import latipe.cart.Entity.Cart;
 import latipe.cart.Entity.CartItem;
+import latipe.cart.dtos.ProductFeatureDto;
 import latipe.cart.dtos.UserCredentialDto;
 import latipe.cart.exceptions.BadRequestException;
 import latipe.cart.exceptions.ForbiddenException;
@@ -25,38 +26,17 @@ import static latipe.cart.constants.CONSTANTS.ADMIN;
 public class CartService implements ICartService {
     private final ICartRepository cartRepository;
     private final ProductService productService;
+
     public CartService(ICartRepository cartRepository, ProductService productService) {
         this.cartRepository = cartRepository;
         this.productService = productService;
     }
+
     @Async
     @Override
     public CompletableFuture<Page<CartListVm>> getCarts(Pageable pageable) {
         return CompletableFuture.supplyAsync(
                 () -> cartRepository.findAll(pageable).map(CartListVm::fromModel)
-        );
-    }
-
-    @Override
-    public CompletableFuture<CartItemPutVm> updateCartItems(CartItemVm cartItemVm, UserCredentialDto userCredential) {
-        return null;
-    }
-
-    @Override
-    public CompletableFuture<Void> removeCartItemByIdList(List<String> productIdList, UserCredentialDto userCredential) {
-        return null;
-    }
-
-    @Override
-    public CompletableFuture<Void> removeCartItemById(String cartItemId, UserCredentialDto userCredential) {
-        return null;
-    }
-
-    @Async
-    @Override
-    public CompletableFuture<CartGetDetailVm> getCartDetailByCustomerId(String userId) {
-        return CompletableFuture.supplyAsync(
-                () -> cartRepository.findByUserId(userId).stream().findFirst().map(CartGetDetailVm::fromModel).orElse(null)
         );
     }
 
@@ -109,33 +89,53 @@ public class CartService implements ICartService {
 
     @Async
     @Override
+    public CompletableFuture<CartGetDetailVm> getCartDetailByCustomerId(String userId) {
+        return CompletableFuture.supplyAsync(
+                () -> cartRepository.findByUserId(userId).stream().findFirst().map(CartGetDetailVm::fromModel).orElse(null)
+        );
+    }
+
+    @Async
+    @Override
     public CompletableFuture<Void> removeCartItemById(String cartId, String cartItemId, UserCredentialDto userCredential) {
         Cart cart = cartRepository.findById(cartId).orElseThrow(
                 () -> new NotFoundException("Not found cart with %s cartId".formatted(cartId))
         );
-        if (!cart.getUserId().equals(userCredential.getId())) {
-            throw new ForbiddenException("You are not allowed to delete this cart");
-        }
-        validateCart(cart, cartItemId);
-        cart.getCartItems().removeIf(cartItem -> cartItem.getId().equals(cartItemId));
-        cartRepository.save(cart);
-        return CompletableFuture.completedFuture(null);
+        return removeListCartItemsById(List.of(
+                cartItemId
+        ), cart, userCredential);
+    }
+
+    @Async
+    @Override
+    public CompletableFuture<Void> removeCartItemById(ProductFeatureDto product, UserCredentialDto userCredential) {
+        Cart cart = cartRepository.findByUserId(userCredential.getId()).orElseThrow(
+                () -> new NotFoundException("Not found user with %s userId".formatted(userCredential.getId()))
+        );
+        return removeListCartItemsByOptionId(List.of(
+                product
+        ), userCredential, cart);
+    }
+
+
+    @Async
+    @Override
+    @Transactional
+    public CompletableFuture<Void> removeCartItemByIdList(String cartId, List<String> cartItemIds, UserCredentialDto userCredential) {
+        Cart cart = cartRepository.findById(cartId).orElseThrow(
+                () -> new NotFoundException("Not found cart with %s cartId".formatted(cartId))
+        );
+        return removeListCartItemsById(cartItemIds, cart, userCredential);
     }
 
     @Async
     @Override
     @Transactional
-    public CompletableFuture<Void> removeCartItemByIdList(String cartId, List<String> productIdList, UserCredentialDto userCredential) {
-        Cart cart = cartRepository.findById(cartId).orElseThrow(
-                () -> new NotFoundException("Not found cart with %s cartId".formatted(cartId))
+    public CompletableFuture<Void> removeCartItemByIdList(List<ProductFeatureDto> productIdList, UserCredentialDto userCredential) {
+        Cart cart = cartRepository.findByUserId(userCredential.getId()).orElseThrow(
+                () -> new NotFoundException("Not found user with %s userId".formatted(userCredential.getId()))
         );
-        if (!cart.getUserId().equals(userCredential.getId()) || !userCredential.getRole().equals(ADMIN)) {
-            throw new ForbiddenException("You are not allowed to delete this cart");
-        }
-        productIdList.forEach(id -> validateCart(cart, id));
-        cart.getCartItems().removeIf(cartItem -> productIdList.contains(cartItem.getId()));
-        cartRepository.save(cart);
-        return CompletableFuture.completedFuture(null);
+        return removeListCartItemsByOptionId(productIdList, userCredential, cart);
     }
 
     @Async
@@ -146,24 +146,20 @@ public class CartService implements ICartService {
                     Cart cart = cartRepository.findById(cartId).orElseThrow(
                             () -> new NotFoundException("Not found cart with %s cartId".formatted(cartId))
                     );
-                    if (!cart.getUserId().equals(userCredential.getId())) {
-                        throw new ForbiddenException("You are not allowed to update this cart");
-                    }
-                    int newQuantity = cartItemVm.quantity();
-                    CartItem cartItem = cart.getCartItems().stream()
-                            .filter(item -> item.getProductId().equals(cartItemVm.productId())
-                                    && item.getProductOptionId().equals(cartItemVm.productOptionId()))
-                            .findFirst().orElseThrow(() -> new NotFoundException("Not found cart item"));
-                    cartItem.setQuantity(newQuantity);
-                    if (newQuantity == 0) {
-                        cart.getCartItems().remove(cartItem);
-                        cartRepository.save(cart);
-                        return CartItemPutVm.fromModel(cartItem, String.format("PRODUCT %s", "DELETED"));
-                    } else {
-                        cartItem.setQuantity(newQuantity);
-                        cart = cartRepository.save(cart);
-                        return CartItemPutVm.fromModel(cartItem, String.format("PRODUCT %s", "UPDATED"));
-                    }
+                    return update(cart, userCredential.getId(), cartItemVm);
+                }
+        );
+    }
+
+    @Override
+    @Async
+    public CompletableFuture<CartItemPutVm> updateCartItems(CartItemVm cartItemVm, UserCredentialDto userCredential) {
+        return CompletableFuture.supplyAsync(
+                () -> {
+                    Cart cart = cartRepository.findByUserId(userCredential.getId()).orElseThrow(
+                            () -> new NotFoundException("Not found user with %s userId".formatted(userCredential.getId()))
+                    );
+                    return update(cart, userCredential.getId(), cartItemVm);
                 }
         );
     }
@@ -196,8 +192,7 @@ public class CartService implements ICartService {
         }
         Set<CartItem> cartDetailListVm = cart.getCartItems();
         boolean itemExist = cartDetailListVm.stream().anyMatch(item ->
-                item.getProductOptionId().equals(productId)
-                        && item.getProductOptionId().equals(optionId));
+                item.getProductOptionId().equals(optionId));
         if (!itemExist) {
             throw new NotFoundException("NOT FOUND ITEM IN CART");
         }
@@ -210,5 +205,50 @@ public class CartService implements ICartService {
         }
         return new CartItem();
     }
+
+    private CartItemPutVm update(Cart cart, String userId, CartItemVm cartItemVm) {
+        if (!cart.getUserId().equals(userId)) {
+            throw new ForbiddenException("You are not allowed to update this cart");
+        }
+        int newQuantity = cartItemVm.quantity();
+        CartItem cartItem = cart.getCartItems().stream()
+                .filter(item -> item.getProductId().equals(cartItemVm.productId())
+                        && item.getProductOptionId().equals(cartItemVm.productOptionId()))
+                .findFirst().orElseThrow(() -> new NotFoundException("Not found cart item"));
+        cartItem.setQuantity(newQuantity);
+        if (newQuantity == 0) {
+            cart.getCartItems().remove(cartItem);
+            cartRepository.save(cart);
+            return CartItemPutVm.fromModel(cartItem, String.format("PRODUCT %s", "DELETED"));
+        } else {
+            cartItem.setQuantity(newQuantity);
+            cart = cartRepository.save(cart);
+            return CartItemPutVm.fromModel(cartItem, String.format("PRODUCT %s", "UPDATED"));
+        }
+    }
+
+    // remove by cart item id
+    private CompletableFuture<Void> removeListCartItemsById(List<String> cartItmesIdList, Cart cart, UserCredentialDto userCredential) {
+        if (!cart.getUserId().equals(userCredential.getId()) || !userCredential.getRole().equals(ADMIN)) {
+            throw new ForbiddenException("You are not allowed to delete this cart");
+        }
+        cartItmesIdList.forEach(id -> validateCart(cart, id));
+        cart.getCartItems().removeIf(cartItem -> cartItmesIdList.contains(cartItem.getId()));
+        cartRepository.save(cart);
+        return CompletableFuture.completedFuture(null);
+    }
+
+    // remove by product id
+    private CompletableFuture<Void> removeListCartItemsByOptionId(List<ProductFeatureDto> productIdList, UserCredentialDto userCredential, Cart cart) {
+        if (!cart.getUserId().equals(userCredential.getId()) || !userCredential.getRole().equals(ADMIN)) {
+            throw new ForbiddenException("You are not allowed to delete this cart");
+        }
+        productIdList.forEach(product -> validateCart(cart, product.getProductId(), product.getOptionId()));
+        List<String> optionIds = productIdList.stream().map(ProductFeatureDto::getOptionId).toList();
+        cart.getCartItems().removeIf(cartItem -> optionIds.contains(cartItem.getProductOptionId()));
+        cartRepository.save(cart);
+        return CompletableFuture.completedFuture(null);
+    }
+
 
 }
